src/dcp-producer.h
@@ -23,6 +23,8 @@
 #include "tapconnection.h"
 #include "dcp-stream.h"
 
+#include <relaxed_atomic.h>
+
 class DcpResponse;
 
 class DcpProducer : public Producer {
@@ -283,8 +285,8 @@ private:
         rel_time_t sendTime;
         uint32_t opaque;
         uint32_t noopInterval;
-        bool pendingRecv;
-        bool enabled;
+        Couchbase::RelaxedAtomic<bool> pendingRecv;
+        Couchbase::RelaxedAtomic<bool> enabled;
     } noopCtx;
 
     DcpResponse *rejectResp; // stash response for retry if E2BIG was hit
